# gtc

./: Cargo.toml  LICENSE  demo.py  history.txt
src/: bitboard.rs  board.rs  game.rs  lib.rs  main.rs  piece.rs  position.rs  repl.rs
test_data/: bird_take  con_edge  miss_call  outfeasts_subsegments_1700873531  pass_loss  stalemate  win_edge
ui/: *compilation*  Cargo.toml
ui/src/: components.rs  events.rs  init.rs  main.rs  menu.rs  proc.rs  resources.rs
