[package]
name = "gtc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitvec = "1.0.1"
rustyline = "12.0.0"
random_word = { version = "0.4.1", features = ["en"] }
chrono = "0.4.31"
strum = { version = "0.25", features = ["derive"] }
rayon = "1.8.0"

