[package]
name = "goats_and_tigers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.12.1", features = ["dynamic_linking"] }
bevy_mod_picking = "0.17.0"
bevy_simple_2d_outline = "0.1.1"
gtc = { path = "../" }
serde = "1.0.193"
serde_yaml = "0.9.27"
strum = {version ="0.25.0", features = ["derive"]}


